2004-06-07  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: complete `bm:' urls.
	* misc.cc: fix url_file with file[0]=='~'.
	* url.cc: unquote host name in valid_bm; don't re-check bm validity
	  after lookup.

2004-06-02  Marc Bevand <marc.bevand@smartjog.com>

	* FindJobDu.cc: use long long to hold file size.

2004-06-01  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: save old directory when no cd verification is done.

2004-05-31  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set copy_failed in NoFileCheck and TransferCheck on 4xx codes;
	  do CPSV only when copy_tls_connect is set.
	* FileCopyFtp.cc: fix compilation without ssl.

2004-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: retry FEAT after login on 503 (invalid sequence of commands).
	* Resolver.cc: fill sa_len if present.
	* Http.cc, NetAccess.cc, ResMgr.cc, misc.cc: new DECL tests and defines.
	* bookmark.cc, bookmark.h, commands.cc, CmdExec.h: move lftp_bookmarks.
	* ftpclass.cc: accept CLNT with argument in FEAT reply.
	* url.cc: (bm:) new URL scheme to refer to bookmarked URLs.

2004-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: assume SSCN is supported without FEAT.

2004-05-26  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, FileCopyFtp.h: vary passive_ssl_connect to find
	  suitable combination of pasv/sscn.
	* ftpclass.cc, ftpclass.h: (copy_ssl_connect) new member; clean up
	  prot and sscn modes choice; don't disconnect on pasv and port errors.
	* resource.cc: (ftp:fxp-passive-sscn) new setting to choose initial
	  sscn mode of passive end of fxp.

2004-05-25  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: drop eof flag if transfer returns error code after
	  data connection is closed.

2004-05-22  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc: increase sftp:max-packets-in-flight to 8.

2004-05-21  Alexander V. Lukyanov <lav@yars.free.net>
